# osu-animation-removal

./: .gitignore  Cargo.toml  README.md
src/: main.rs
