[package]
name = "osu-animation-removal"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
regex = "1.5.6"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
question = "0.2.2"
